Fix: Controller usuario